--- a/homework_1/homework_1.ipynb
+++ b/homework_1/homework_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "      dtype='object', length=6820)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "[8 rows x 6820 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -508,23 +508,17 @@
        "abbey          1\n",
        "abbracciava    1\n",
        "abilities      4\n",
-       "              ..\n",
-       "ไทย            4\n",
-       "བོདཡིག         3\n",
-       "မြန်မာဘာသာ     2\n",
-       "한국어            6\n",
-       "日本語            4\n",
-       "Length: 6820, dtype: int64"
+       "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "n_w = documents_count_df.sum()\n",
-    "n_w"
+    "n_w.head()"
    ]
   },
   {
@@ -1910,6 +1904,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 3a"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
@@ -1952,6 +1953,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 3b"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 315,
    "metadata": {},
@@ -1991,6 +1999,13 @@
     "hc = HClust(distance_threshold=0,n_clusters=None ,linkage='complete')\n",
     "hc.fit(x)\n",
     "plot_dendrogram(hc, filename=\"3a_complete_dendrogram\", color_threshold = 2.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 3c"
    ]
   },
   {
@@ -2075,6 +2090,13 @@
     "hc = HClust(distance_threshold=0,metric='precomputed',n_clusters=None ,linkage='complete')\n",
     "hc.fit(distances**2)\n",
     "plot_dendrogram(hc, filename=\"3c_complete_squared_dendrogram\", color_threshold = 7.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 3e"
    ]
   },
   {
@@ -2200,13 +2222,6 @@
     "hc.fit(distances**2)\n",
     "plot_dendrogram(hc, filename=\"3e_average_squared_dendrogram\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
